update: add the start process endpoint
